[package]
name = "labyrinth"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
bevy_replicon = "0.18.1"
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"] }

[features]
client = []
dev = ["bevy/dynamic_linking"]
